beta 4
======

- Added some logging. That's just a start: the idea is to increase AR verbosity 
  in order to reduce the need of debugging to diagnose problems.

- Refactored ActiveRecordStarter.Initialize to use ActiveRecordSectionHandler.Instance

- Introduced ActiveRecordSectionHandler.Instance to avoid repetitive code.
  Now, instead of
  
  IConfiguration source = (IConfiguration) ConfigurationSettings.GetSection("activerecord");
  
  (or similar) you can use
  
  IConfiguration source = ActiveRecordSectionHandler.Instance;
  
  Bare in mind that it looks for a section named "activerecord" on the configuration
  file associated with the AppDomain, and throws an exception if it cannot be found.

- Applied Marc-Andre's patch fixing AR-68
  "Make ActiveRecordValidation.ValidationErrorMessages virtual to simplify localisation"

- Added SessionScope.Current static property to gain access to the
  current ISessionScope implementation

- Changed ISessionScope:
    Added FlushAction property
    Added Flush method to allow people to have more control on when to flush

- Applied patch by Michael Morton <mmorton@wickednite.com>. Quoting explanation:

Since the generic base class varies with the type parameter 
(i.e. ActiveRecordBase<One> is not the same as ActiveRecordBase<Two>) 
there is no easy way to specify multiple configurations using the 
"type=" attribute.  There is also no easy way to create multiple 
subclasses as the documentation suggests for when using the non 
generic base class.

However, there is an easy fix for this.  Even though, for example, 
these two base types are "different", ActiveRecordBase<One> and 
ActiveRecordBase<Two>, they share the same generic type definition, 
namely "ActiveRecordBase`1".  With a small change to the function 
"GetRootType" in "SessionFactoryHolder.cs" to make it look at the 
generic type definition when dealing with a generic type, instead 
of the generic type itself, you can once again easily access multiple databases.
